generated/checker-for-evaluation/generated/test-Buffer-Overflow-a97de7bff13b1cc825c1b1344eaed8d6c2d3e695/build_logs/9/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:23:17: error: ‘taint’ is not a namespace-name
   23 | using namespace taint;
      |                 ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const T* {anonymous}::findSpecificTypeInParentsHelper(const clang::Stmt*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:33:66: error: ‘class clang::ProgramPoint’ has no member named ‘getStmt’
   33 |     if (const T *Found = dyn_cast_or_null<T>(Pred->getLocation().getStmt()))
      |                                                                  ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const clang::DeclRefExpr* {anonymous}::findDeclRefWithNameInParents(const clang::Stmt*, llvm::StringRef, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:47:84: error: ‘class clang::ProgramPoint’ has no member named ‘getStmt’
   47 |     if (const DeclRefExpr *DRE = dyn_cast_or_null<DeclRefExpr>(Pred->getLocation().getStmt())) {
      |                                                                                    ^~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
